# VTIL-Sandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  test.vtil
VTIL-Binding/: CMakeLists.txt
VTIL-Binding/include/bindings/: basic_block.hpp  basic_types.hpp  instruction_desc.hpp  operand.hpp
VTIL-Sandbox/: CMakeLists.txt  VTIL-Sandbox.aps  VTIL-Sandbox.rc  VTIL-Sandbox.sln  VTIL-Sandbox.vcxproj  VTIL-Sandbox.vcxproj.filters  lambda_event_listener.cpp  lambda_event_listener.hpp  main.cpp  resource.h
VTIL-Sandbox/bindings/: instruction.hpp  instruction_desc.hpp  operand.hpp
VTIL-Sandbox/builds/assets/: graph.html  menu.html  text.html
VTIL-Sandbox/builds/assets/scripts/: main.js  menu.js
VTIL-Sandbox/builds/assets/style/: main.css  menu.css
VTIL-SandboxFrontend/: .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
VTIL-SandboxFrontend/src/: App.vue
VTIL-SandboxFrontend/src/components/: MainToolbar.vue  SplittablePane.vue
VTIL-SandboxFrontend/src/router/: index.js
VTIL-SandboxFrontend/src/views/: Home.vue
